--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,6 +2,9 @@
 {% block content %}
 {{sam}}
 <form method="POST" action="">{% csrf_token %}
+{% if error %}
+    {{error}}
+{% endif %}
 <input type="text" name="username">
 <input type="password" name="password">
 <button type="submit">登録</button>
