--- a/templates/list.html
+++ b/templates/list.html
@@ -10,8 +10,8 @@
 {% for item in object_list %}
 <p>タイトル:{{item.title}}</p>
 <p>項目:{{item.content}}</p>
-<a href='#'>更新</a>
-<a href='#'>削除</a>
+<a href="/update/{{item.id}}">更新</a>
+<a href='/delete/{{item.id}}'>削除</a>
 <hr>
 {% endfor %}
 {% endblock content %}
