--- a/templates/update.html
+++ b/templates/update.html
@@ -6,6 +6,19 @@
 <p>タイトル:<input type="text" value="{{task.title}}" name="title"></p>
 <p>内容:<textarea name="content">{{task.content}}</textarea></p>
 <p><input type="text" value="{{task.author}}" name="author"></p>
+<p>開始:<input type="datetime-local" value="{{task.starttime}}" name="starttime"></p>
+<p>終了:<input type="datetime-local" value="{{task.endtime}}" " name="endtime"></p>
+<p>やらないこと:
+    <select value="{{task.nottodo}}" name="nottodo">
+        {% if task.nottodo == 'on' %}
+        <option>on</option>
+        <option>off</option>
+        {% else %}
+        <option>off</option>
+        <option>on</option>
+        {% endif %}
+    </select>    
+    </p>
 <button type="submit">更新</button>
 </form>
 {% endblock content %}
