--- a/templates/update.html
+++ b/templates/update.html
@@ -6,8 +6,8 @@
 <p>タイトル:<input type="text" value="{{task.title}}" name="title"></p>
 <p>内容:<textarea name="content">{{task.content}}</textarea></p>
 <p><input type="text" value="{{task.author}}" name="author"></p>
-<p>開始:<input type="datetime-local" value="{{task.starttime}}" name="starttime"></p>
-<p>終了:<input type="datetime-local" value="{{task.endtime}}" " name="endtime"></p>
+<p>開始:<input type="datetime-local" value="{{task.starttime|date:'Y-m-d H:i'}}" name="starttime"></p>
+<p>終了:<input type="datetime-local" value="{{task.endtime|date:'Y-m-d H:i'}}" name="endtime"></p>
 <p>やらないこと:
     <select value="{{task.nottodo}}" name="nottodo">
         {% if task.nottodo == 'on' %}
