update taskmodel add progress adn memo

--- a/templates/update.html
+++ b/templates/update.html
@@ -5,7 +5,7 @@
 <form method="POST" action="">{% csrf_token %}
 <p>タイトル:<input type="text" value="{{task.title}}" name="title"></p>
 <p>内容:<textarea name="content">{{task.content}}</textarea></p>
-<p><input type="text" value="{{task.author}}" name="author"></p>
+<p><input type="hidden" value="{{task.author}}" name="author"></p>
 <p>開始:<input type="datetime-local" value="{{task.starttime|date:'Y-m-d H:i'}}" name="starttime"></p>
 <p>終了:<input type="datetime-local" value="{{task.endtime|date:'Y-m-d H:i'}}" name="endtime"></p>
 <p>やらないこと:
@@ -19,6 +19,25 @@
         {% endif %}
     </select>    
     </p>
+<p>進捗:
+<select name="progress">
+    {% if task.progress == 'inprocess' %}
+    <option value="inprocess">実行中</option>
+    <option value="incomplete">未遂</option>
+    <option value="complete">完了</option>
+    {% elif task.progress == 'complete'  %}
+    <option value="complete">完了</option>
+    <option value="">未遂</option>
+    <option value="incomplete">実行中</option>
+    {% else %}
+    <option value="incomplete">未遂</option>
+    <option value="inprocess">実行中</option>
+    <option value="complete">完了</option>
+    {% endif %}
+</select>
+</p>
+<p>メモ:<textarea name="memo" >{{task.memo}}</textarea></p>
+
 <button type="submit">更新</button>
 </form>
 {% endblock content %}
