--- a/templates/create.html
+++ b/templates/create.html
@@ -1,23 +1,78 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<a href="/list/">一覧</a>
-<form method="POST" action="">{% csrf_token %}
-<p>タイトル:<input type="text" name="title"></p>
-<p>内容:<textarea name="content"></textarea></p>
-<p>開始:<input type="datetime-local" name="starttime"></p>
-<p>終了:<input type="datetime-local" name="endtime"></p>
-<p>やらないこと:
-    <select value="{{task.nottodo}}" name="nottodo">
-        {% if task.nottodo == 'on' %}
-        <option>on</option>
-        <option>off</option>
-        {% else %}
-        <option>off</option>
-        <option>on</option>
-        {% endif %}
-    </select>    
-    </p>
-<button type="submit">登録</button>
-</form>
+<div class="mt-7 bg-white border border-gray-200 rounded-xl shadow-sm">
+    <div class="p-4 sm:p-7">
+      <div class="text-center">
+        <h2 class="block text-2xl font-bold text-gray-800">Create New Todo</h2>
+      </div>
+  
+      
+        <!-- Form -->
+        <form method="POST" action="">{% csrf_token %}
+          <div onClick="test()" class="grid gap-y-4">
+            <!-- Form Group -->
+            <div>
+                <label for="nottodo" class="block text-sm mb-2">Not Todo</label>
+                <select value="{{task.nottodo}}" name="nottodo" id="nottodo" class="bg-gray-50">
+                    {% if task.nottodo == 'on' %}
+                    <option>on</option>
+                    <option>off</option>
+                    {% else %}
+                    <option>off</option>
+                    <option>on</option>
+                    {% endif %}
+                </select>    
+            </div>
+            <!-- End Form Group -->
+            <!-- Form Group -->
+            <div>
+              <label for="title" class="block text-sm mb-2">Title</label>
+              <div class="relative">
+                <input type="text" name="title" class="bg-gray-50 py-3 px-4 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none" required>
+                <div class="hidden absolute inset-y-0 end-0 pointer-events-none pe-3">
+                  <svg class="size-5 text-red-500" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" aria-hidden="true">
+                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
+                  </svg>
+                </div>
+              </div>
+            </div>
+            <!-- End Form Group -->
+                         <!-- Form Group -->
+            <div>
+                <label for="content" class="block text-sm mb-2">Content</label>
+                <div class="relative">
+                  <textarea name="content" class="bg-gray-50 py-3 px-4 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none" required></textarea>
+                </div>
+              </div>
+            <!-- End Form Group -->
+            <div id="dateform">
+            <!-- Form Group -->
+                <div>
+                    <label for="starttime" class="block text-sm mb-2">StartTime</label>
+                    <div class="relative">
+                        <input type="datetime-local" name="starttime" id="starttime" class="bg-gray-50">
+                    </div>
+                </div>
+                <!-- End Form Group -->
+                <!-- Form Group -->
+                <div>
+                    <label for="endtime" class="block text-sm mb-2">EndTime</label>
+                    <div class="relative">
+                        <input type="datetime-local" name="endtime" id="endtime" class="bg-gray-50">
+                    </div>
+                </div>
+                <!-- End Form Group -->
+                </div>
+
+                <div class="mx-auto">
+                <button type="submit" class="bg-blue-50 w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-blue-500 hover:bg-blue-100 disabled:opacity-50 disabled:pointer-events-none">Create</button>
+                </div>
+          </div>
+        </form>
+        <!-- End Form -->
+      </div>
+
+  </div>
+
 {% endblock content %}
