--- a/templates/update.html
+++ b/templates/update.html
@@ -1,50 +1,101 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<a href="/list/">一覧</a>
-{% if task.nottodo == 'off' %}
-<h3>やること更新</h3>
-{% elif task.nottodo == 'on' %}
-<h3>やらないこと更新</h3>
-{% endif %}
-<form method="POST" action="">{% csrf_token %}
-<p>タイトル:<input type="text" value="{{task.title}}" name="title"></p>
-<p>内容:<textarea name="content">{{task.content}}</textarea></p>
-<p><input type="hidden" value="{{task.author}}" name="author"></p>
-{% if task.nottodo == 'off' %}
-<p>開始:<input type="datetime-local" value="{{task.starttime|date:'Y-m-d H:i'}}" name="starttime"></p>
-<p>終了:<input type="datetime-local" value="{{task.endtime|date:'Y-m-d H:i'}}" name="endtime"></p>
-<p>やらないこと:
-    <select value="{{task.nottodo}}" name="nottodo">
-        {% if task.nottodo == 'on' %}
-        <option>on</option>
-        <option>off</option>
-        {% else %}
-        <option>off</option>
-        <option>on</option>
-        {% endif %}
-    </select>    
-</p>
-{% endif %}
-<p>進捗:
-<select name="progress">
-    {% if task.progress == 'inprocess' %}
-    <option value="inprocess">実行中</option>
-    <option value="incomplete">未遂</option>
-    <option value="complete">完了</option>
-    {% elif task.progress == 'complete'  %}
-    <option value="complete">完了</option>
-    <option value="">未遂</option>
-    <option value="incomplete">実行中</option>
-    {% else %}
-    <option value="incomplete">未遂</option>
-    <option value="inprocess">実行中</option>
-    <option value="complete">完了</option>
-    {% endif %}
-</select>
-</p>
-<p>メモ:<textarea name="memo" >{{task.memo}}</textarea></p>
 
-<button type="submit">更新</button>
-</form>
+
+<div class="mt-7 bg-white border border-gray-200 rounded-xl shadow-sm">
+    <div class="p-4 sm:p-7">
+      <div class="text-center">
+        <h2 class="block text-2xl font-bold text-gray-800">Update Todo</h2>
+      </div>
+  
+      
+        <!-- Form -->
+        <form method="POST" action="">{% csrf_token %}
+          <div class="grid gap-y-4 px-4">
+            <!-- Form Group -->
+            <div>
+              <label for="title" class="block text-sm mb-2">Title</label>
+              <div class="relative">
+                <input type="text" name="title" value="{{task.title}}" class="bg-gray-50 py-3 px-4 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none" required>
+                <div class="hidden absolute inset-y-0 end-0 pointer-events-none pe-3">
+                  <svg class="size-5 text-red-500" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" aria-hidden="true">
+                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
+                  </svg>
+                </div>
+              </div>
+            </div>
+            <!-- End Form Group -->
+                         <!-- Form Group -->
+            <div>
+                <label for="content" class="block text-sm mb-2">Content</label>
+                <div class="relative">
+                  <textarea name="content" class="bg-gray-50 py-3 px-4 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none" required>{{task.content}}</textarea>
+                </div>
+              </div>
+            <!-- End Form Group -->
+            <!-- Form Group -->
+             {% if task.nottodo == 'on' %}
+             <input type="hidden" name="starttime" value="{{task.starttime|date:'Y-m-d H:i'}}">
+             <input type="hidden" name="endtime" value="{{task.endtime|date:'Y-m-d H:i'}}">
+             <input type="hidden" name="progress" value="complete">
+
+             {% else %}
+            <div>
+                <label for="starttime" class="block text-sm mb-2">StartTime</label>
+                <div class="relative">
+                    <input type="datetime-local" name="starttime" value="{{task.starttime|date:'Y-m-d H:i'}}" class="bg-gray-50">
+                </div>
+            </div>
+            <!-- End Form Group -->
+            <!-- Form Group -->
+              <div>
+                <label for="endtime" class="block text-sm mb-2">EndTime</label>
+                <div class="relative">
+                    <input type="datetime-local" name="endtime" value="{{task.endtime|date:'Y-m-d H:i'}}" class="bg-gray-50">
+                </div>
+              </div>
+            <!-- End Form Group -->
+            <!-- Form Group -->
+            <div>
+                <label for="progress" class="block text-sm mb-2">Progress</label>
+                <div class="relative">
+                  <select name="progress" class="bg-gray-50 py-3 px-4 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none" required>
+                    {% if task.progress == 'inprocess' %}
+                    <option value="inprocess">inprocess</option>
+                    <option value="incomplete">incomplete</option>
+                    <option value="complete">complete</option>
+                    {% elif task.progress == 'complete'  %}
+                    <option value="complete">complete</option>
+                    <option value="incomplete">incomplete</option>
+                    <option value="inprocess">inprocess</option>
+                    {% else %}
+                    <option value="incomplete">incomplete</option>
+                    <option value="inprocess">inprocess</option>
+                    <option value="complete">complete</option>
+                    {% endif %}
+                  </select>
+                </div>
+              </div>
+            <!-- End Form Group -->
+            {% endif %}
+             <!-- Form Group -->
+            <div>
+                <label for="memo" class="block text-sm mb-2">Memo</label>
+                <div class="relative">
+                  <textarea name="memo" class="bg-gray-50 py-3 px-4 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none" required>{{task.memo}}</textarea>
+                </div>
+              </div>
+              <!-- End Form Group -->
+            <input type="hidden" name="nottodo" value="{{task.nottodo}}">  
+            <div class="mx-auto">
+                <button type="submit" class="bg-blue-50 w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-blue-500 hover:bg-blue-100 disabled:opacity-50 disabled:pointer-events-none">Update</button>
+            </div>
+          </div>
+        </form>
+        <!-- End Form -->
+      </div>
+
+  </div>
+
 {% endblock content %}
