--- a/templates/create.html
+++ b/templates/create.html
@@ -10,7 +10,7 @@
       
         <!-- Form -->
         <form method="POST" action="">{% csrf_token %}
-          <div onClick="test()" class="grid gap-y-4">
+          <div onClick="test()" class="grid gap-y-4 px-4">
             <!-- Form Group -->
             <div>
                 <label for="nottodo" class="block text-sm mb-2">Not Todo</label>
