--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-
+{{sam}}
 <div class="mt-7 mx-3 bg-white border border-gray-200 rounded-xl shadow-sm">
     <div class="p-4 sm:p-7">
       <div class="text-center">
